<resources>
    <string name="app_name">Invetory App</string>
    <string name="emptystring1" />
    <string name="emptystring2" />
    <string name="emptyString3" />
    <string name="emptyString4" />
    <string name="emptyStringID" />
    <string name="emptyStringAddProduct" />
    <string name="emptyStringAddquantity" />
    <string name="emptyStringAddPrice" />
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="emptyStringExp" />
    <string name="ewmptyStringLocation" />
    <string name="emptyStringLocation" />
    <string name="emptyStringTempName" />
</resources>
