<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Item to be removed"
        android:textColor="#BF360C"
        android:textSize="29sp"

        android:textStyle="bold" />

    <TextView
        android:id="@+id/TVaddedProduct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/emptyStringAddProduct" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="152dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textView23"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Location:" />

            <TextView
                android:id="@+id/RLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/emptyStringLocation" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ID:" />

            <TextView
                android:id="@+id/Rid"
                android:layout_width="72dp"
                android:layout_height="wrap_content"
                android:text="@string/emptyStringID" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textView19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Name:" />

            <TextView
                android:id="@+id/Rname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/emptyStringAddProduct" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textView20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Price:" />

            <TextView
                android:id="@+id/Rprice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/emptyStringAddPrice" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textView21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Qty:" />

            <TextView
                android:id="@+id/Rquantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/emptyStringAddquantity" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textView22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Exp:" />

            <TextView
                android:id="@+id/RExpiration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/emptyStringExp" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/RRemove"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="55dp"
        android:onClick="onRemoveClick"
        android:text="Remove" />

    <Button
        android:id="@+id/RCancel"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onRemoveClick"
        android:text="Cancel " />

</LinearLayout>
