<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:text="View Inventory"
        android:textColor="#BF360C"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="29dp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:text="ID:   "
                android:textSize="18sp" />

            <TextView
                android:layout_width="138dp"
                android:layout_height="wrap_content"
                android:text="Product: "
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Quantity:   "
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="117dp"
                android:layout_height="wrap_content"
                android:text="Price: "
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="262dp"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/TVid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/emptystring1"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/TVproduct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/emptystring2"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/TVquantity"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/emptyString3"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/TVPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/emptyString4"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </TableLayout>

</LinearLayout>
